Added Dockerfile for amd64.

--- a/docker/pointpillars.18.04.amd64.cuda10_2/Dockerfile
+++ b/docker/pointpillars.18.04.amd64.cuda10_2/Dockerfile
@@ -5,7 +5,7 @@
 # pytorch       latest (pip)
 # ==================================================================
 
-FROM tanabeken/public:base.ubuntu18.04.arm64.20200712
+FROM tanabeken/public:base.ubuntu18.04.amd64.20200712
 
 # ==================================================================
 # PointPillars
